labs/networking/network-policy/block-access-to-data-api.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: data-api-policy
  namespace: hackfest
spec:
  podSelector:
    matchLabels:
      app: data-api
  ingress: []
